# seq2seq-sort

./: .dockerignore  Dockerfile  README.md  api.py  app.py  data.py  evaluate.py  models.py  predict.py  pyproject.toml  tests.py  tokenizers.py  train.py  utils.py
