[tool.poetry]
name = "seq2seq-sort"
version = "0.1.0"
description = ""
authors = ["Jay Mody <jaykmody@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
torch = "^1.11.0"
pytorch-lightning = "^1.6.2"
tqdm = "^4.64.0"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.8"
isort = "^5.10.1"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = ["C", "R", "unspecified-encoding"]
extension-pkg-whitelist = "pydantic"
generated-members = ["torch"]
